--- a/CSS/01 css fonts/style.css
+++ b/CSS/01 css fonts/style.css
@@ -1,5 +1,16 @@
 body{
     font-family: sans-serif;
-    font-size: 64px;
-    text-decoration: underline;
+    
+    text-decoration:wavy;
+    text-transform: capitalize;
+    line-height: 60px;
+    text-shadow: 2px 2px 5px rgba(255, 0, 0, 0.7);
+}
+.hellobtn{
+    background-color: brown;
+    color: white;
+}
+.hellobtn:hover{
+    background-color: blue;
+    cursor: pointer;
 }
