--- a/CSS/06 Card Design/style.css
+++ b/CSS/06 Card Design/style.css
@@ -10,6 +10,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 2em;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 body {
   background-color: #d5c6ff;
